--- a/2_scripts/01_1_preprocessing (SANBS).ipynb
+++ b/2_scripts/01_1_preprocessing (SANBS).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1e58b34f",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c651ca81",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "Name: Year, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "31309d6b",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "4                        NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "efb5add5",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "Name: OUTCOME_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "96b8658a",
    "metadata": {},
    "outputs": [],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d900c16f",
    "metadata": {
     "scrolled": false
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "86369fcc",
    "metadata": {
     "scrolled": true
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ca5b81c4",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
        "Name: donation_product_x, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4bb334f8",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "5cb016c6",
    "metadata": {},
    "outputs": [
@@ -718,19 +718,19 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ECA008</td>\n",
-       "      <td>[2022-03-18 00:00:00, 2022-06-17 00:00:00, 202...</td>\n",
-       "      <td>246</td>\n",
+       "      <td>[2022-01-03 00:00:00, 2022-01-03 00:00:00, 202...</td>\n",
+       "      <td>245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>EED001</td>\n",
-       "      <td>[2022-02-21 00:00:00, 2022-02-10 00:00:00, 202...</td>\n",
+       "      <td>[2022-01-03 00:00:00, 2022-01-03 00:00:00, 202...</td>\n",
        "      <td>95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>EED003</td>\n",
-       "      <td>[2022-09-23 00:00:00, 2022-02-26 00:00:00, 202...</td>\n",
+       "      <td>[2022-01-03 00:00:00, 2022-01-03 00:00:00, 202...</td>\n",
        "      <td>288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -742,7 +742,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>EEE003</td>\n",
-       "      <td>[2022-02-18 00:00:00, 2022-04-22 00:00:00, 202...</td>\n",
+       "      <td>[2022-02-18 00:00:00, 2022-02-18 00:00:00, 202...</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -754,49 +754,49 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>EEE005</td>\n",
-       "      <td>[2022-05-04 00:00:00, 2022-02-23 00:00:00, 202...</td>\n",
+       "      <td>[2022-02-23 00:00:00, 2022-02-23 00:00:00, 202...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>EEE007</td>\n",
-       "      <td>[2022-02-22 00:00:00, 2022-04-26 00:00:00, 202...</td>\n",
+       "      <td>[2022-02-22 00:00:00, 2022-02-22 00:00:00, 202...</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>EEE008</td>\n",
-       "      <td>[2022-01-14 00:00:00, 2022-05-13 00:00:00, 202...</td>\n",
+       "      <td>[2022-01-14 00:00:00, 2022-01-14 00:00:00, 202...</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>EEE009</td>\n",
-       "      <td>[2022-01-28 00:00:00, 2022-10-28 00:00:00, 202...</td>\n",
+       "      <td>[2022-01-28 00:00:00, 2022-01-28 00:00:00, 202...</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>EEE010</td>\n",
-       "      <td>[2022-01-18 00:00:00, 2022-03-29 00:00:00, 202...</td>\n",
+       "      <td>[2022-01-18 00:00:00, 2022-01-18 00:00:00, 202...</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>EEE011</td>\n",
-       "      <td>[2022-02-22 00:00:00, 2022-04-26 00:00:00, 202...</td>\n",
+       "      <td>[2022-02-22 00:00:00, 2022-02-22 00:00:00, 202...</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>EEE012</td>\n",
-       "      <td>[2022-02-14 00:00:00, 2022-06-08 00:00:00, 202...</td>\n",
+       "      <td>[2022-02-14 00:00:00, 2022-02-14 00:00:00, 202...</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>EEE014</td>\n",
-       "      <td>[2022-08-10 00:00:00, 2022-11-30 00:00:00, 202...</td>\n",
+       "      <td>[2022-01-12 00:00:00, 2022-01-12 00:00:00, 202...</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -808,55 +808,55 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>EEE017</td>\n",
-       "      <td>[2022-10-19 00:00:00, 2022-03-02 00:00:00, 202...</td>\n",
+       "      <td>[2022-03-02 00:00:00, 2022-03-02 00:00:00, 202...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>EEE018</td>\n",
-       "      <td>[2022-04-20 00:00:00, 2022-04-20 00:00:00, 202...</td>\n",
+       "      <td>[2022-02-09 00:00:00, 2022-02-09 00:00:00, 202...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>EEE019</td>\n",
-       "      <td>[2022-05-20 00:00:00, 2022-01-21 00:00:00, 202...</td>\n",
+       "      <td>[2022-01-21 00:00:00, 2022-01-21 00:00:00, 202...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>EEE020</td>\n",
-       "      <td>[2022-11-16 00:00:00, 2022-03-23 00:00:00, 202...</td>\n",
+       "      <td>[2022-03-23 00:00:00, 2022-03-23 00:00:00, 202...</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>EEE021</td>\n",
-       "      <td>[2022-03-01 00:00:00, 2022-08-02 00:00:00, 202...</td>\n",
+       "      <td>[2022-01-04 00:00:00, 2022-01-04 00:00:00, 202...</td>\n",
        "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>EEE022</td>\n",
-       "      <td>[2022-03-15 00:00:00, 2022-11-09 00:00:00, 202...</td>\n",
+       "      <td>[2022-03-15 00:00:00, 2022-03-15 00:00:00, 202...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>EEE024</td>\n",
-       "      <td>[2022-10-18 00:00:00, 2022-04-19 00:00:00, 202...</td>\n",
+       "      <td>[2022-04-19 00:00:00, 2022-04-19 00:00:00, 202...</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>EEE025</td>\n",
-       "      <td>[2022-02-16 00:00:00, 2022-08-24 00:00:00, 202...</td>\n",
+       "      <td>[2022-02-16 00:00:00, 2022-02-16 00:00:00, 202...</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>EEE026</td>\n",
-       "      <td>[2022-03-07 00:00:00, 2022-08-22 00:00:00, 202...</td>\n",
+       "      <td>[2022-03-07 00:00:00, 2022-03-07 00:00:00, 202...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -871,34 +871,34 @@
       ],
       "text/plain": [
        "   MobileID                                              Dates  Counts\n",
-       "0    ECA008  [2022-03-18 00:00:00, 2022-06-17 00:00:00, 202...     246\n",
-       "1    EED001  [2022-02-21 00:00:00, 2022-02-10 00:00:00, 202...      95\n",
-       "2    EED003  [2022-09-23 00:00:00, 2022-02-26 00:00:00, 202...     288\n",
+       "0    ECA008  [2022-01-03 00:00:00, 2022-01-03 00:00:00, 202...     245\n",
+       "1    EED001  [2022-01-03 00:00:00, 2022-01-03 00:00:00, 202...      95\n",
+       "2    EED003  [2022-01-03 00:00:00, 2022-01-03 00:00:00, 202...     288\n",
        "3    EEE002  [2022-05-11 00:00:00, 2022-05-11 00:00:00, 202...       1\n",
-       "4    EEE003  [2022-02-18 00:00:00, 2022-04-22 00:00:00, 202...       6\n",
+       "4    EEE003  [2022-02-18 00:00:00, 2022-02-18 00:00:00, 202...       6\n",
        "5    EEE004  [2022-02-23 00:00:00, 2022-02-23 00:00:00, 202...       4\n",
-       "6    EEE005  [2022-05-04 00:00:00, 2022-02-23 00:00:00, 202...       4\n",
-       "7    EEE007  [2022-02-22 00:00:00, 2022-04-26 00:00:00, 202...       5\n",
-       "8    EEE008  [2022-01-14 00:00:00, 2022-05-13 00:00:00, 202...      12\n",
-       "9    EEE009  [2022-01-28 00:00:00, 2022-10-28 00:00:00, 202...      11\n",
-       "10   EEE010  [2022-01-18 00:00:00, 2022-03-29 00:00:00, 202...       5\n",
-       "11   EEE011  [2022-02-22 00:00:00, 2022-04-26 00:00:00, 202...       5\n",
-       "12   EEE012  [2022-02-14 00:00:00, 2022-06-08 00:00:00, 202...       5\n",
-       "13   EEE014  [2022-08-10 00:00:00, 2022-11-30 00:00:00, 202...       6\n",
+       "6    EEE005  [2022-02-23 00:00:00, 2022-02-23 00:00:00, 202...       4\n",
+       "7    EEE007  [2022-02-22 00:00:00, 2022-02-22 00:00:00, 202...       5\n",
+       "8    EEE008  [2022-01-14 00:00:00, 2022-01-14 00:00:00, 202...      12\n",
+       "9    EEE009  [2022-01-28 00:00:00, 2022-01-28 00:00:00, 202...      11\n",
+       "10   EEE010  [2022-01-18 00:00:00, 2022-01-18 00:00:00, 202...       5\n",
+       "11   EEE011  [2022-02-22 00:00:00, 2022-02-22 00:00:00, 202...       5\n",
+       "12   EEE012  [2022-02-14 00:00:00, 2022-02-14 00:00:00, 202...       5\n",
+       "13   EEE014  [2022-01-12 00:00:00, 2022-01-12 00:00:00, 202...       6\n",
        "14   EEE016  [2022-05-17 00:00:00, 2022-05-17 00:00:00, 202...       1\n",
-       "15   EEE017  [2022-10-19 00:00:00, 2022-03-02 00:00:00, 202...       4\n",
-       "16   EEE018  [2022-04-20 00:00:00, 2022-04-20 00:00:00, 202...       4\n",
-       "17   EEE019  [2022-05-20 00:00:00, 2022-01-21 00:00:00, 202...       4\n",
-       "18   EEE020  [2022-11-16 00:00:00, 2022-03-23 00:00:00, 202...       5\n",
-       "19   EEE021  [2022-03-01 00:00:00, 2022-08-02 00:00:00, 202...      13\n",
-       "20   EEE022  [2022-03-15 00:00:00, 2022-11-09 00:00:00, 202...       4\n",
-       "21   EEE024  [2022-10-18 00:00:00, 2022-04-19 00:00:00, 202...       2\n",
-       "22   EEE025  [2022-02-16 00:00:00, 2022-08-24 00:00:00, 202...       3\n",
-       "23   EEE026  [2022-03-07 00:00:00, 2022-08-22 00:00:00, 202...       4\n",
+       "15   EEE017  [2022-03-02 00:00:00, 2022-03-02 00:00:00, 202...       4\n",
+       "16   EEE018  [2022-02-09 00:00:00, 2022-02-09 00:00:00, 202...       4\n",
+       "17   EEE019  [2022-01-21 00:00:00, 2022-01-21 00:00:00, 202...       4\n",
+       "18   EEE020  [2022-03-23 00:00:00, 2022-03-23 00:00:00, 202...       5\n",
+       "19   EEE021  [2022-01-04 00:00:00, 2022-01-04 00:00:00, 202...      13\n",
+       "20   EEE022  [2022-03-15 00:00:00, 2022-03-15 00:00:00, 202...       4\n",
+       "21   EEE024  [2022-04-19 00:00:00, 2022-04-19 00:00:00, 202...       2\n",
+       "22   EEE025  [2022-02-16 00:00:00, 2022-02-16 00:00:00, 202...       3\n",
+       "23   EEE026  [2022-03-07 00:00:00, 2022-03-07 00:00:00, 202...       4\n",
        "24   EEE027  [2022-07-19 00:00:00, 2022-07-19 00:00:00, 202...       1"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,6 +911,7 @@
     "df_mID=df_2022.groupby(\"MobileID\")[\"Visit_Date\"].apply(list)\n",
     "df_mID = pd.DataFrame({'MobileID': df_mID.index, 'Dates': df_mID.values})\n",
     "df_mID[\"Counts\"]=df_mID['Dates'].apply(lambda x: len(np.unique(x)))\n",
+    "df_mID[\"Dates\"]=df_mID['Dates'].apply(lambda x: sorted(x))\n",
     "\n",
     "df_mID.head(25)"
    ]
@@ -3890,9 +3891,6 @@
     "#remove permanent deferrals\n",
     "df.drop(df[df.Deferral_permanent == 'Perm'].index, inplace=True)\n",
     "df.drop(df[(df['OUTCOME_TYPE'] == 'other deferral') & (df['Deferral_permanent'] == 'NoDeferral')].index, inplace=True)\n",
-    "\n",
-    "dfhgb=df.query(\"OUTCOME_TYPE == 'low hgb'\")\n",
-    "dfhgb.head()\n",
     "\n"
    ]
   },
@@ -4083,8 +4081,8 @@
     "\n",
     "\n",
     "df_end=df.loc[df['time_to_return2'] <0]\n",
-    "df_end.head()\n",
-    "#print(len(df_end))\n"
+    "\n",
+    "print(len(df_end))\n"
    ]
   },
   {
