--- a/2_scripts/01_1_preprocessing (SANBS).ipynb
+++ b/2_scripts/01_1_preprocessing (SANBS).ipynb
@@ -911,8 +911,8 @@
     "df_mID=df_2022.groupby(\"MobileID\")[\"Visit_Date\"].apply(list)\n",
     "df_mID = pd.DataFrame({'MobileID': df_mID.index, 'Dates': df_mID.values})\n",
     "df_mID[\"Counts\"]=df_mID['Dates'].apply(lambda x: len(np.unique(x)))\n",
-    "df_mID[\"Dates\"]=df_mID['Dates'].apply(lambda x: sorted(x))\n",
-    "\n",
+    "df_mID[\"Dates\"]=df_mID['Dates'].apply(lambda x: sorted(x)) ##look into it\n",
+    "-- \n",
     "df_mID.head(25)"
    ]
   },
