--- a/2_scripts/03_1_lasso_penalised_cph(SANBS).ipynb
+++ b/2_scripts/03_1_lasso_penalised_cph(SANBS).ipynb
@@ -1016,6 +1016,8 @@
    ],
    "source": [
     "\n",
+    "#train on 50, test on 50\n",
+    "\n",
     "# Split the data into training and test sets\n",
     "X_train3, X_test3, y_train3, y_test3 = train_test_split(X3, y3, test_size=0.7, random_state=0)\n",
     "\n",
